Baby steps.